src/objects/Lead/fields/Account_Market_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Account_Market_Hidden__c</fullName>
    <description>Created as a workaround to map Lead.Market to Account.Market (Lead.Market currently mapped to Opportunity.Market).</description>
    <label>Account Market (Hidden)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>