src/objects/Lead/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <description>Field on www.marlow.com Contact Us form - autopopulated upon form submission</description>
    <inlineHelpText>From www.marlow.com Contact Us form</inlineHelpText>
    <label>Questions/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>