src/objects/Lead/fields/ConvertedStatus__c.field-meta.xml
<CustomField>
    <fullName>ConvertedStatus__c</fullName>
    <label>ConvertedStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
                <default>true</default>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>