src/objects/Lead/fields/Customer_Qual_Req_d__c.field-meta.xml
<CustomField>
    <fullName>Customer_Qual_Req_d__c</fullName>
    <label>Customer Qual Req&apos;d?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>