src/objects/Lead/fields/Display_ISO_Country__c.field-meta.xml
<CustomField>
    <fullName>Display_ISO_Country__c</fullName>
    <label>Display ISO Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_Countries</valueSetName>
    </valueSet>
</CustomField>