src/objects/Lead/fields/Existing_Buyer_New_Part_PICKLIST__c.field-meta.xml
<CustomField>
    <fullName>Existing_Buyer_New_Part_PICKLIST__c</fullName>
    <description>Does this person/company already exist in the system, but a new Lead record needed to be created for a new/separate product request? If so, value = &quot;Yes&quot;.</description>
    <label>Existing Contact, New Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>