src/objects/Lead/fields/Full_Thermal_Assembly_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Thermal_Assembly_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Included on request for quote form on marlow.com</description>
    <label>Full Thermal Assembly Required?</label>
    <type>Checkbox</type>
</CustomField>