src/objects/Lead/fields/Lead_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Lead_Nbr__c</fullName>
    <displayFormat>L-{000000}</displayFormat>
    <inlineHelpText>Use this number to refer to this Lead record.</inlineHelpText>
    <label>Lead Nbr</label>
    <type>AutoNumber</type>
</CustomField>