src/objects/Lead/fields/Lead_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text__c</fullName>
    <formula>TEXT( LeadSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Text</label>
    <type>Text</type>
</CustomField>