src/objects/Lead/fields/Marketing_Communication_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Communication_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Communication Opt Out</label>
    <type>Checkbox</type>
</CustomField>