src/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thermoelectric Component</fullName>
            </value>
            <value>
                <fullName>Thermoelectric Assembly</fullName>
            </value>
            <value>
                <fullName>EverGen PowerStrap</fullName>
            </value>
            <value>
                <fullName>Power Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>