src/objects/Lead/validationRules/Require_Phone_OR_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Phone_OR_Email</fullName>
    <active>true</active>
    <description>The phone OR the email field must be filled out on the lead record prior to Save.</description>
    <errorConditionFormula>ISBLANK( Phone )  &amp;&amp;  ISBLANK( Email ) &amp;&amp; OR(OR(CreatedById  &lt;&gt; &quot;005C0000003VWml&quot;,
NOT(ISPICKVAL(LeadSource,&quot;&quot;))),
(CreatedById  &lt;&gt; &quot;005C0000003VWml&quot; &amp;&amp;
NOT(ISPICKVAL(LeadSource,&quot;&quot;))))</errorConditionFormula>
    <errorMessage>Phone or Email must be entered to save.</errorMessage>
</ValidationRule>